--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AlloCinéClone</title>
-	<!-- Bootstrap & FontAwesome & AnimateCSS -->
-	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<!-- Materialize & AnimateCSS -->
+	<link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
+	<link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
 	<!-- CSS -->
 	<link rel="stylesheet" href="dist/css/index.css">
 </head>
 <body>
 	<!-- NavBar -->
+	<a class="waves-effect waves-light btn">
+		<i class="material-icons left">cloud</i>
+		button
+	</a>
 
 	<!-- Content -->
 
 	<!-- Footer -->
 </body>
-<!-- Boostrap & Popper & JQuery & Axios -->
-<script src="./node_modules/jquery/dist/jquery.min.js"></script>
-<script src="./node_modules/popper/index.js"></script>
-<script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- Materialize & Axios -->
+<script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
 <script src="./node_modules/axios/dist/axios.min.js"></script>
 <!-- JS -->
 <script src="./assets/js/main.js"></script>
