--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 					</a>
 				</div>
 				<div class="col s12 m8">
-					<div class="nav-search input-field w-100">
-						<input id="search" type="search" required>
+					<div class="nav-search input-field white w-100">
+						<input id="search" type="search">
 						<label class="label-icon" for="search">
 							<i class="material-icons">search</i>
 						</label>
@@ -51,6 +51,7 @@
 	<!-- Footer -->
 </body>
 <!-- Materialize & Axios -->
+<script src="./node_modules/autocompleter/autocomplete.min.js"></script>
 <script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
 <script src="./node_modules/axios/dist/axios.min.js"></script>
 <!-- JS -->
