--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<!-- NavBar -->
-	<article class="nav amber z-depth-2">
-		<nav class="container nav-extended amber z-depth-0">
+	<article class="nav teal z-depth-2">
+		<nav class="container nav-extended teal z-depth-0">
 			<section class="nav-wrapper row">
 				<div class="col s12 m4">
 					<a href="index.html">
@@ -47,6 +47,9 @@
 	</article>
 
 	<!-- Content -->
+	<section id="card-box" class="cardbox">
+
+	</section>
 
 	<!-- Footer -->
 </body>
