--- a/index.html
+++ b/index.html
@@ -46,10 +46,55 @@
 		</nav>
 	</article>
 
+	<!-- Header -->
+	<section class="container">
+		<h1 id="header-title">Recherche sur Allociné</h1>
+	</section>
+
 	<!-- Content -->
 	<section id="card-box" class="cardbox"></section>
 
 	<!-- Footer -->
+	<footer class="footer page-footer grey darken-4 z-depth-2">
+		<div class="container">
+			<div class="row">
+				<section class="col l6 s12">
+					<h5 class="white-text">Follow Us</h5>
+					<div>
+						<a rel="nofollow" href="https://www.facebook.com/allocine" 
+						class="btn-floating btn-large waves-effect waves-light grey darken-3">
+							<img height="100%" width="60%" src="assets/images/facebook.svg" alt="facebook" title="Facebook">
+						</a>
+						<a rel="nofollow" href="https://twitter.com/allocine" 
+						class="btn-floating btn-large waves-effect waves-light grey darken-3">
+							<img height="100%" width="60%" src="assets/images/twitter.svg" alt="twitter" title="Twitter">
+						</a>
+						<a rel="nofollow" href="https://www.instagram.com/allocine/" 
+						class="btn-floating btn-large waves-effect waves-light grey darken-3">
+							<img height="100%" width="60%" src="assets/images/instagram.svg" alt="instagram" title="Instagram">
+						</a>
+					</div>
+				</section>
+				<section class="col l4 offset-l2 s12">
+					<h5 class="white-text">Links</h5>
+					<ul>
+						<li><a rel="nofollow" class="grey-text text-lighten-3" href="#!">Filmstarts</a></li>
+						<li><a rel="nofollow" class="grey-text text-lighten-3" href="#!">SansaCine</a></li>
+						<li><a rel="nofollow" class="grey-text text-lighten-3" href="#!">Beyazperde</a></li>
+						<li><a rel="nofollow" class="grey-text text-lighten-3" href="#!">AdoroCinema</a></li>
+					</ul>
+				</section>
+			</div>
+		</div>
+		<section class="footer-copyright z-depth-4">
+			<div class="container">
+				© 2020 Iswenzz
+				<span class="grey-text text-lighten-4 right">
+					Retrouvez tous les horaires et infos de votre cinéma sur le numéro AlloCiné : <span class="amber-text">0 133 713 370</span>
+				</span>
+			</div>
+		</section>
+	</footer>
 </body>
 <!-- Materialize & Axios -->
 <script src="./node_modules/autocompleter/autocomplete.min.js"></script>
