--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</article>
 
 	<!-- Header -->
-	<section class="container">
+	<section class="header container">
 		<h1 id="header-title">Recherche sur Allociné</h1>
 	</section>
 
