--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
 <script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
 <script src="./node_modules/axios/dist/axios.min.js"></script>
 <!-- JS -->
-<script src=".key"></script>
+<script src="./key.js"></script>
 <script src="./assets/js/main.js"></script>
 </html>
