--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AlloCinéClone</title>
-	<!-- CSS -->
-	<link rel="stylesheet" href="dist/css/index.css">
 </head>
 <body>
 	<!-- NavBar -->
@@ -14,7 +12,7 @@
 			<section class="nav-wrapper row">
 				<div class="col s12 m4">
 					<a href="index.html">
-						<img class="responsive-img w-100" src="assets/images/allocine-logo.svg" alt="allocine logo">
+						<img class="responsive-img w-100" src="src/assets/images/allocine-logo.svg" alt="allocine logo">
 					</a>
 				</div>
 				<div class="col s12 m8">
@@ -96,11 +94,5 @@
 		</section>
 	</footer>
 </body>
-<!-- Materialize & Axios -->
-<script src="./node_modules/autocompleter/autocomplete.min.js"></script>
-<script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
-<script src="./node_modules/axios/dist/axios.min.js"></script>
-<!-- JS -->
-<script src="./key.js"></script>
-<script src="./assets/js/main.js"></script>
+<script src="dist/main.js"></script>
 </html>
