Refactor source & started movie page

--- a/movie.html
+++ b/movie.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>AlloCinéClone - Accueil</title>
+	<title>AlloCinéClone - Movie</title>
 </head>
 <body>
 	<!-- NavBar -->
@@ -46,11 +46,13 @@
 
 	<!-- Header -->
 	<section class="header container">
-		<h1 id="header-title">Recherche sur Allociné</h1>
+		<h1 id="movie-header-title"></h1>
 	</section>
 
 	<!-- Content -->
-	<section id="card-container" class="cardbox"></section>
+	<section id="movie-content" class="movieinfo">
+		
+	</section>
 
 	<!-- Footer -->
 	<footer class="footer page-footer grey darken-4 z-depth-2">
