Movie: user rating progressbar

--- a/movie.html
+++ b/movie.html
@@ -29,10 +29,10 @@
 			<section class="nav-content">
 				<ul class="tabs tabs-transparent">
 					<li class="tab">
-						<a class="caps">Cinéma</a>
+						<a class="caps">Movies</a>
 					</li>
 					<li class="tab">
-						<a class="caps">Séries</a>
+						<a class="caps">Series</a>
 					</li>
 					<li class="tab">
 						<a class="caps">Trailers</a>
@@ -68,7 +68,12 @@
 					<span id="movie-genre"></span> •
 					<span id="movie-duration"></span>
 				</div>
-				<div id="movie-rating"></div>
+				<div class="row">
+					<div class="col s2">
+						<div id="movie-rating" class="movieinfo-rating"></div>
+					</div>
+					<h5 class="col s6">User Rating</h5>
+				</div>
 				<div id="movie-description"></div>
 			</div>
 		</div>
@@ -110,7 +115,7 @@
 			<div class="container">
 				© 2020 Iswenzz
 				<span class="grey-text text-lighten-4 right">
-					Retrouvez tous les horaires et infos de votre cinéma sur le numéro AlloCiné : <span class="indigo-text">0 133 713 370</span>
+					Find all the schedules and information for your cinema with the AlloCiné number : <span class="indigo-text">0 133 713 370</span>
 				</span>
 			</div>
 		</section>
