Changed lang to english

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<section class="nav-content">
 				<ul class="tabs tabs-transparent">
 					<li class="tab">
-						<a class="caps">Cinéma</a>
+						<a class="caps">Movies</a>
 					</li>
 					<li class="tab">
-						<a class="caps">Séries</a>
+						<a class="caps">Series</a>
 					</li>
 					<li class="tab">
 						<a class="caps">Trailers</a>
@@ -46,7 +46,7 @@
 
 	<!-- Header -->
 	<section class="header container">
-		<h1 id="header-title" class="center">Recherche sur Allociné</h1>
+		<h1 id="header-title" class="center">Search on Allociné</h1>
 	</section>
 
 	<!-- Content -->
@@ -88,7 +88,7 @@
 			<div class="container">
 				© 2020 Iswenzz
 				<span class="grey-text text-lighten-4 right">
-					Retrouvez tous les horaires et infos de votre cinéma sur le numéro AlloCiné : <span class="indigo-text">0 133 713 370</span>
+					Find all the schedules and information for your cinema with the AlloCiné number : <span class="indigo-text">0 133 713 370</span>
 				</span>
 			</div>
 		</section>
