--- a/movie.html
+++ b/movie.html
@@ -69,10 +69,10 @@
 					<span id="movie-duration"></span>
 				</div>
 				<div class="row">
-					<div class="col s2">
+					<div class="col l2 m3 s4">
 						<div id="movie-rating" class="movieinfo-rating"></div>
 					</div>
-					<h5 class="col s6">User Rating</h5>
+					<h5 class="col l6 m7 s8">User Rating</h5>
 				</div>
 				<div id="movie-description"></div>
 			</div>
