Movie: top billed cast scroll container

--- a/movie.html
+++ b/movie.html
@@ -55,7 +55,7 @@
 		</ul>
 	</section>
 
-	<!-- Content -->
+	<!-- Movie -->
 	<section id="movie-content" class="movieinfo z-depth-2">
 		<div class="container row">
 			<div class="col s12 m4">
@@ -77,6 +77,12 @@
 				<div id="movie-description"></div>
 			</div>
 		</div>
+	</section>
+
+	<!-- Casting -->
+	<section class="container casting">
+		<h2>Top Billed Cast</h2>
+		<section id="casting-content" class="casting-content z-depth-2"></section>
 	</section>
 
 	<!-- Footer -->
