Movie: Added movie trailer & youtube player

--- a/movie.html
+++ b/movie.html
@@ -85,6 +85,12 @@
 		<section id="casting-content" class="casting-content z-depth-2"></section>
 	</section>
 
+	<!-- Video -->
+	<section class="container video">
+		<h2>Movie Trailer</h2>
+		<div id="movie-video" class="video-player"></div>
+	</section>
+
 	<!-- Footer -->
 	<footer class="footer page-footer grey darken-4 z-depth-2">
 		<div class="container">
