SASS refactor & "moviedb" module for types definitions

--- a/movie.html
+++ b/movie.html
@@ -79,17 +79,25 @@
 		</div>
 	</section>
 
-	<!-- Casting -->
-	<section class="container casting">
-		<h2>Top Billed Cast</h2>
-		<section id="casting-content" class="casting-content z-depth-2"></section>
-	</section>
+	<!-- Infos -->
+	<main class="container-xl row">
+		<aside class="col s12 m3 push-m9 z-depth-4">
+			<h4>TEST</h4>
+		</aside>
+		<section class="col s12 m9 pull-m3">
+			<!-- Casting -->
+			<section class="casting">
+				<h2>Top Billed Cast</h2>
+				<section id="casting-content" class="casting-content z-depth-2"></section>
+			</section>
 
-	<!-- Video -->
-	<section class="container video">
-		<h2>Movie Trailer</h2>
-		<div id="movie-video" class="video-player"></div>
-	</section>
+			<!-- Video -->
+			<section class="video">
+				<h2>Movie Trailer</h2>
+				<div id="movie-video" class="video-player"></div>
+			</section>
+		</section>
+	</main>
 
 	<!-- Footer -->
 	<footer class="footer page-footer grey darken-4 z-depth-2">
