Movie: added side infos

--- a/movie.html
+++ b/movie.html
@@ -81,10 +81,29 @@
 
 	<!-- Infos -->
 	<main class="container-xl row">
-		<aside class="col s12 m3 push-m9 z-depth-4">
-			<h4>TEST</h4>
+		<aside class="aside col s12 m3 push-m9">
+			<div class="aside-divs">
+				<h6>Status</h6>
+				<p id="movie-status"></p>
+			</div>
+			<div class="aside-divs">
+				<h6>Original Language</h6>
+				<p id="movie-language"></p>
+			</div>
+			<div class="aside-divs">
+				<h6>Budget</h6>
+				<p id="movie-budget"></p>
+			</div>
+			<div class="aside-divs">
+				<h6>Revenue</h6>
+				<p id="movie-revenue"></p>
+			</div>
+			<div class="aside-divs">
+				<h6>Keywords</h6>
+				<ul class="keywords" id="movie-keywords"></ul>
+			</div>
 		</aside>
-		<section class="col s12 m9 pull-m3">
+		<section class="infos col s12 m9 pull-m3">
 			<!-- Casting -->
 			<section class="casting">
 				<h2>Top Billed Cast</h2>
