--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>AlloCinéClone - Index</title>
+	<title>AlloCinéClone - Search</title>
 </head>
 <body>
 	<!-- NavBar -->
@@ -44,8 +44,13 @@
 		</nav>
 	</article>
 
+	<!-- Header -->
+	<section class="header container">
+		<h1 id="header-title" class="center">Search on Allociné</h1>
+	</section>
+
 	<!-- Content -->
-	<main></main>
+	<section id="card-container" class="cardbox"></section>
 
 	<!-- Footer -->
 	<footer class="footer page-footer grey darken-4 z-depth-2">
