--- a/movie.html
+++ b/movie.html
@@ -17,7 +17,7 @@
 					</a>
 				</div>
 				<div class="col s12 m8">
-					<div class="nav-search input-field white w-100">
+					<div class="nav-search input-field white">
 						<input id="search" type="search">
 						<label class="label-icon" for="search">
 							<i class="material-icons">search</i>
@@ -27,7 +27,7 @@
 				</div>
 			</section>
 			<section class="nav-content">
-				<ul class="tabs tabs-transparent">
+				<ul id="nav-tabs" class="tabs tabs-transparent">
 					<li class="tab">
 						<a class="caps">Movies</a>
 					</li>
@@ -47,7 +47,7 @@
 
 	<!-- Tabs -->
 	<section class="movietabs nav-content container center">
-		<ul class="tabs transparent darken-4">
+		<ul id="movie-tabs" class="tabs transparent darken-4">
 			<li class="tab col s3"><a href="#test1">Overview</a></li>
 			<li class="tab col s3"><a href="#test2">Media</a></li>
 			<li class="tab col s3"><a href="#test3">Fandom</a></li>
