--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 					</a>
 				</div>
 				<div class="col s12 m8">
-					<div class="nav-search input-field white w-100">
+					<div class="nav-search input-field white">
 						<input id="search" type="search">
 						<label class="label-icon" for="search">
 							<i class="material-icons">search</i>
@@ -26,7 +26,7 @@
 				</div>
 			</section>
 			<section class="nav-content">
-				<ul class="tabs tabs-transparent">
+				<ul id="nav-tabs" class="tabs tabs-transparent">
 					<li class="tab">
 						<a class="caps">Movies</a>
 					</li>
