--- a/index.html
+++ b/index.html
@@ -67,6 +67,26 @@
 			<h2 class="container">Trending</h2>
 			<div id="trending-carousel" class="carousel"></div>
 		</section>
+
+		<!-- Join -->
+		<section class="join z-depth-3">
+			<div class="join-content container row">
+				<div class="col s12 m8">
+					<h3>Join Today</h3>
+					<h5>Get access to maintain your own custom personal lists, track what you've seen and search and filter for what to watch next—regardless if it's in theatres, on TV or available on popular streaming services like Canal+, Canal+ Disney+, Netflix, and Amazon Prime Video.</h5>
+					<a class="waves-effect waves-light btn indigo" href="#!register">Sign Up</a>
+				</div>
+				<div class="col s12 m4">
+					<ul>
+						<li>Enjoy AlloCiné ad free</li>
+						<li>Maintain a personal watchlist</li>
+						<li>Filter by your subscribed streaming services and find something to watch</li>
+						<li>Log the movies and TV shows you've seen</li>
+						<li>Build custom lists</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<!-- Footer -->
