Moved HTMLs to public folder

--- a/public/index.html
+++ b/public/index.html
@@ -25,22 +25,6 @@
 					</div>
 				</div>
 			</section>
-			<section class="nav-content">
-				<ul id="nav-tabs" class="tabs tabs-transparent">
-					<li class="tab">
-						<a class="caps">Movies</a>
-					</li>
-					<li class="tab">
-						<a class="caps">Series</a>
-					</li>
-					<li class="tab">
-						<a class="caps">Trailers</a>
-					</li>
-					<li class="tab">
-						<a class="caps">VOD</a>
-					</li>
-				</ul>
-			</section>
 		</nav>
 	</article>
 
@@ -52,7 +36,7 @@
 				<img id="plx-bg" alt="parallax bg">
 			</div>
 			<header class="container plx-header">
-				<h1>Millions of movies, TV shows and people to discover. Explore now.</h1>
+				<h1 class="white-text">Millions of movies, TV shows and people to discover. Explore now.</h1>
 			</header>
 		</section>
 
@@ -131,5 +115,4 @@
 		</section>
 	</footer>
 </body>
-<script src="dist/main.js"></script>
 </html>
