[Packages & Webpack] Added html-loader & Webp support

--- a/public/index.html
+++ b/public/index.html
@@ -82,15 +82,15 @@
 					<div>
 						<a rel="nofollow" href="https://www.facebook.com/allocine" 
 						class="btn-floating btn-large waves-effect waves-light grey darken-3">
-							<img height="100%" width="60%" src="src/assets/images/facebook.svg" alt="facebook" title="Facebook">
+							<img height="100%" width="60%" src="../src/assets/images/facebook.svg" alt="facebook" title="Facebook">
 						</a>
 						<a rel="nofollow" href="https://twitter.com/allocine" 
 						class="btn-floating btn-large waves-effect waves-light grey darken-3">
-							<img height="100%" width="60%" src="src/assets/images/twitter.svg" alt="twitter" title="Twitter">
+							<img height="100%" width="60%" src="../src/assets/images/twitter.svg" alt="twitter" title="Twitter">
 						</a>
 						<a rel="nofollow" href="https://www.instagram.com/allocine/" 
 						class="btn-floating btn-large waves-effect waves-light grey darken-3">
-							<img height="100%" width="60%" src="src/assets/images/instagram.svg" alt="instagram" title="Instagram">
+							<img height="100%" width="60%" src="../src/assets/images/instagram.svg" alt="instagram" title="Instagram">
 						</a>
 					</div>
 				</section>
