Index: queryMedias return MediaResponse & Pagination in search page

--- a/public/search.html
+++ b/public/search.html
@@ -28,13 +28,21 @@
 		</nav>
 	</article>
 
-	<!-- Header -->
-	<section class="header container">
-		<h1 id="header-title" class="center">Search on Allociné</h1>
-	</section>
+	<main>
+		<!-- Header -->
+		<section class="header container">
+			<h1 id="header-title" class="center">Search on Allociné</h1>
+		</section>
 
-	<!-- Content -->
-	<section id="card-container" class="cardbox"></section>
+		<!-- Content -->
+		<section id="card-container" class="cardbox"></section>
+
+		<!-- Pagination -->
+		<ul id="media-pagination" class="container pagination">
+			<li class="waves-effect waves-light" data-type="prev"><a><i class="material-icons">chevron_left</i></a></li>
+			<li class="waves-effect waves-light" data-type="next"><a><i class="material-icons">chevron_right</i></a></li>
+		</ul>
+	</main>
 
 	<!-- Footer -->
 	<footer class="footer page-footer grey darken-4 z-depth-2">
