--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AlloCinéClone - Index</title>
+	<meta name="theme-color" content="#2A2A2A">
+    <meta name="title" content="AlloCinéClone - Index">
+    <meta name="description" content="Millions of movies, TV shows and people to discover. Explore now.">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="AlloCinéClone - Index">
+    <meta property="og:description" content="Millions of movies, TV shows and people to discover. Explore now.">
+    <meta property="og:image" content="">
+    <meta property="twitter:card" content="">
+    <meta property="twitter:title" content="AlloCinéClone - Index">
+    <meta property="twitter:description" content="Millions of movies, TV shows and people to discover. Explore now.">
+    <meta property="twitter:image" content="">
 </head>
 <body>
 	<!-- NavBar -->
