Pagination: component used in search page

--- a/public/search.html
+++ b/public/search.html
@@ -49,10 +49,7 @@
 		<section id="card-container" class="cardbox"></section>
 
 		<!-- Pagination -->
-		<ul id="media-pagination" class="container pagination">
-			<li class="waves-effect waves-light" data-type="prev"><a><i class="material-icons">chevron_left</i></a></li>
-			<li class="waves-effect waves-light" data-type="next"><a><i class="material-icons">chevron_right</i></a></li>
-		</ul>
+		<ul id="media-pagination" class="container pagination"></ul>
 	</main>
 
 	<!-- Footer -->
